Fixed border and layout problems

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,8 @@ body {
     color: #333333;
     font-family: "Helvetica Neue", Arial, sans-serif;
     font-size: 15px;
-    margin: 0px;
+    margin: 0px !important;
+    padding: 0px !important;
 }
 
 #left-column {
@@ -34,7 +35,7 @@ h5 {
 }
 
 .graph_card {
-    background-color: white;
+    /* background-color: white; */
     border-radius: 0.675rem;
     padding: 1rem;
     margin: auto;
